Support Output Filter

--- a/NearColorChecker001/NearColorChecker001/App.config
+++ b/NearColorChecker001/NearColorChecker001/App.config
@@ -19,6 +19,9 @@
             <setting name="Threshold" serializeAs="String">
                 <value />
             </setting>
+            <setting name="FilterString" serializeAs="String">
+                <value />
+            </setting>
         </NearColorChecker001.Properties.Settings>
     </userSettings>
 </configuration>
