--- a/NearColorChecker001/NearColorChecker001/Properties/Settings.settings
+++ b/NearColorChecker001/NearColorChecker001/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="Threshold" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="FilterString" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
