--- a/NearColorChecker001/NearColorChecker001/App.config
+++ b/NearColorChecker001/NearColorChecker001/App.config
@@ -22,6 +22,9 @@
             <setting name="FilterString" serializeAs="String">
                 <value />
             </setting>
+            <setting name="MonoThreshold" serializeAs="String">
+                <value />
+            </setting>
         </NearColorChecker001.Properties.Settings>
     </userSettings>
 </configuration>
