available cusomize wait time after move

--- a/NearColorChecker001/NearColorChecker001/App.config
+++ b/NearColorChecker001/NearColorChecker001/App.config
@@ -25,6 +25,9 @@
             <setting name="DiffThreshold" serializeAs="String">
                 <value />
             </setting>
+            <setting name="WaitTime" serializeAs="String">
+                <value />
+            </setting>
         </NearColorChecker001.Properties.Settings>
     </userSettings>
 </configuration>
