--- a/NearColorChecker001/NearColorChecker001/Properties/Settings.settings
+++ b/NearColorChecker001/NearColorChecker001/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="DiffThreshold" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="WaitTime" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
