--- a/NearColorChecker001/NearColorChecker001/NearColorChecker001.csproj
+++ b/NearColorChecker001/NearColorChecker001/NearColorChecker001.csproj
@@ -31,7 +31,7 @@
     <InstallUrl>https://nearcolorchecker.codeplex.com/releases/clickonce/</InstallUrl>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>6</ApplicationRevision>
+    <ApplicationRevision>7</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -58,10 +58,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>56491B64AFA48C1546628EBE320170758D638E17</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>4C833B24E39BA0213478E0CCEF0C3C854EEFAC66</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>NearColorChecker001_一時キー.pfx</ManifestKeyFile>
+    <ManifestKeyFile>NearColorChecker001_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -130,6 +130,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="NearColorChecker001_TemporaryKey.pfx" />
     <None Include="NearColorChecker001_一時キー.pfx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
