add priority filter

--- a/NearColorChecker001/NearColorChecker001/App.config
+++ b/NearColorChecker001/NearColorChecker001/App.config
@@ -28,6 +28,9 @@
             <setting name="WaitTime" serializeAs="String">
                 <value />
             </setting>
+            <setting name="PriorityString" serializeAs="String">
+                <value />
+            </setting>
         </NearColorChecker001.Properties.Settings>
     </userSettings>
 </configuration>
