--- a/NearColorChecker001/NearColorChecker001/NearColorChecker001.csproj
+++ b/NearColorChecker001/NearColorChecker001/NearColorChecker001.csproj
@@ -28,10 +28,10 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <InstallUrl>https://nearcolorchecker.codeplex.com/releases/clickonce/</InstallUrl>
+    <InstallUrl>http://autumn009.github.io/NearColorChecker.Releases/deploy/stable/</InstallUrl>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>10</ApplicationRevision>
+    <ApplicationRevision>12</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
