--- a/NearColorChecker001/NearColorChecker001/NearColorChecker001.csproj
+++ b/NearColorChecker001/NearColorChecker001/NearColorChecker001.csproj
@@ -59,10 +59,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>0216C88B009B2414B55B06A1DE5D9494327BAA7E</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>874AC6DBED9BC18EBE8045E7CD2B39FA83B8D53D</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>NearColorChecker001_2_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>NearColorChecker001_3_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -92,6 +92,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MyCreateBitmap.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="WorkingWindow.xaml.cs">
       <DependentUpon>WorkingWindow.xaml</DependentUpon>
@@ -133,6 +134,7 @@
     </EmbeddedResource>
     <None Include="NearColorChecker001_1_TemporaryKey.pfx" />
     <None Include="NearColorChecker001_2_TemporaryKey.pfx" />
+    <None Include="NearColorChecker001_3_TemporaryKey.pfx" />
     <None Include="NearColorChecker001_TemporaryKey.pfx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
