update for .NET Framework 4.8

--- a/NearColorChecker001/NearColorChecker001/App.config
+++ b/NearColorChecker001/NearColorChecker001/App.config
@@ -1,35 +1,35 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="NearColorChecker001.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="NearColorChecker001.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
     <userSettings>
         <NearColorChecker001.Properties.Settings>
             <setting name="Target" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="Trash" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="Threshold" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="FilterString" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="DiffThreshold" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="WaitTime" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="PriorityString" serializeAs="String">
-                <value />
+                <value/>
             </setting>
         </NearColorChecker001.Properties.Settings>
     </userSettings>
